src/objects/PDFPage__c.object
<CustomObject>
    <description>These are the pages associated to a pdf object</description>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>The URL of the image for the page</description>
        <inlineHelpText>The URL of the image for the page</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PDF__c</fullName>
        <description>The pdf record related to the page</description>
        <label>PDF</label>
        <referenceTo>PDF__c</referenceTo>
        <relationshipLabel>PDFPages</relationshipLabel>
        <relationshipName>PDFPages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Page_Number__c</fullName>
        <description>The order this page will be in the generated pdf</description>
        <inlineHelpText>What page is this in the pdf?</inlineHelpText>
        <label>Page Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PDFPage</label>
    <nameField>
        <label>PDFPage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDFPages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>